--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,34 +1,6 @@
-<div class="container">
 
-  <div ng-include="'components/navbar/navbar.html'"></div>
-
-  <div class="jumbotron text-center">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">
-      <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
-      Always a pleasure scaffolding your apps.
-    </p>
-    <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!</a></p>
-  </div>
-
-  <div class="row">
-    <div class="col-sm-6 col-md-4" ng-repeat="post in posts">
- <a href="Posts/{{post.postName}}">
-              <h2>{{post.metaData.title}}</h2>
-              </a>
-            <div class="blog exceprt" ng-bind-html="post.excerptAsHtml">>
-            </div>
-            <h4>
-                <small class="text-muted" am-time-ago="post.metaData.createdDate" am-preprocess="utc">
-                </small>
-                <small ><a href="Posts/{{post.postName}}#disqus_thread" class="text-muted">Read More</a><small>
+    <div class="row">
+        <div class="col-sm-6 col-md-4" ng-repeat="post in posts">
+            <blog-post-snippet></blog-post-snippet>
+        </div>
     </div>
-  </div>
-
-  <hr>
-
-  <div class="footer">
-    <p>With ♥ from <a href="https://twitter.com/Swiip">@Swiip</a></p>
-  </div>
-
-</div>
